# room-booker-backend

./: LICENSE  Makefile  README.md  pyproject.toml
room_booker/: manage.py
room_booker/booking/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
room_booker/booking/migrations/: 0001_initial.py
room_booker/general/: managers.py  models.py  paginations.py
room_booker/project/: asgi.py  settings.py  urls.py  wsgi.py
